# chile-stock-analyzer-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.sh
.github/workflows/: ci-cd.yml
app/: config.py  dependencies.py  main.py
app/application/dtos/: financial_dto.py  stock_dto.py
app/application/interfaces/: macro_data_provider.py  market_data_provider.py
app/core/: logging.py
app/domain/: exceptions.py
app/domain/entities/: base.py  company.py  financial.py  stock.py  trade.py
app/domain/repositories/: financial_repository.py  stock_repository.py  trade_repository.py
app/domain/services/: dcf_valuation.py  metrics_calculator.py  opportunity_scoring.py  swing_signal_service.py  technical_indicators.py
app/domain/value_objects/: money.py
app/infrastructure/parsers/: normalizer.py  pdf_financial_parser.py  xlsx_financial_parser.py
docs/: ANALISIS_FUENTES_DATOS.md  PLAN_BACKEND_COMPLETO.md  PLAN_IR_PARSER.md  SWING_TRADING.md
scripts/: diagnose_all_sources.py  diagnose_ir_connection.py  diagnose_xlsx_structure.py  diagnose_yahoo_data.py  refresh_prices.py  seed_ipsa_data.py  seed_price_history.py  test_ir_scraper.py  test_parser_local.py
scripts/output/: data_coverage_report.json  ir_scraper_test_results.json
telegram_bot/: api_client.py  bot.py  config.py  formatters.py
tests/: conftest.py
tests/unit/: test_dcf_valuation.py  test_entities.py  test_health.py  test_ir_parsers.py  test_metrics_calculator.py  test_opportunity_scoring.py  test_technical_indicators.py
(+27 files in other folders)
